# BitCrypto

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTINUIDADE.md  CONTRIBUTING.md  MAINTAINERS.md  MAINTENANCE.md  MANIFEST_v1.7.0.txt  MANIFEST_v1.8.0.txt  MANIFEST_v1.9.0.txt  MANIFEST_v2.0.0.txt  MANIFEST_v2.1.0.txt  MANIFEST_v2.1.1.txt  MANIFEST_v2.1.2.txt  MANIFEST_v2.2.0.txt  MANIFEST_v2.3.0.txt  MANIFEST_v2.3.1.txt  MANIFEST_v2.4.0.txt  MANIFEST_v2.4.1.txt  MANIFEST_v2.4.2.txt  MANIFEST_v2.4.6.txt  MANIFEST_v2.5.0.txt  README.md  ROADMAP.md  SECURITY.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci-windows.yml  windows-msvc.yml
BitCrypto.Bench/: CMakeLists.txt
BitCrypto.Bench/src/: bench.cpp
BitCrypto.BenchCLI/src/: main.cpp
BitCrypto.CLI/: CMakeLists.txt
BitCrypto.CLI/src/: main.cpp
BitCrypto.Core/: CMakeLists.txt
BitCrypto.Core/include/bitcrypto/: base.h  ec_parse.h  ec_secp256k1.h  endo_shamir.h  field_n.h  field_secp256k1.h  mod_n.h  msm_pippenger.h  rng.h  scalar_n.h  u256.h  util.h
BitCrypto.Core/include/bitcrypto/utils/: safe.h  validation.h
BitCrypto.Core/tests/: CMakeLists.txt  tests_endo_shamir.cpp  tests_msm_pippenger.cpp
BitCrypto.EC/include/bitcrypto/ec/: ec_secp256k1.h  fe_secp256k1.h  secp256k1.h
BitCrypto.Encoding/: CMakeLists.txt
BitCrypto.Encoding/include/bitcrypto/encoding/: address.h  address_detect.h  b58check.h  base58.h  base64.h  bech32.h  der.h  segwit.h  taproot.h  wif.h
BitCrypto.GPU/: CMakeLists.txt
BitCrypto.GPU/include/bitcrypto/gpu/: ec_gpu.cuh  hash_gpu.cuh  match_gpu.cuh  match_p2tr_gpu.cuh  sha256_gpu.cuh  taproot_gpu.cuh
BitCrypto.GPU/src/: kernels.cu  match.cu  match_p2tr.cu  sha256_gpu.cu  taproot_gpu.cu
BitCrypto.HD/: CMakeLists.txt
BitCrypto.HD.CLI/: CMakeLists.txt
BitCrypto.HD.CLI/src/: hd_main.cpp
BitCrypto.HD/include/bitcrypto/hd/: bip32.h  bip39.h  bip44.h
BitCrypto.Hash/: CMakeLists.txt
BitCrypto.Hash/include/bitcrypto/hash/: hash160.h  hmac.h  hmac_sha256.h  hmac_sha512.h  pbkdf2_hmac_sha512.h  ripemd160.h  sha256.h  sha256_cpu.h  sha512.h  tagged.h  tagged_hash.h
BitCrypto.Hash/include/bitcrypto/sign/: schnorr_bip340.h
BitCrypto.Hash/src/: unity.cpp
BitCrypto.KDF/: CMakeLists.txt
BitCrypto.KDF/include/bitcrypto/kdf/: pbkdf2.h  pbkdf2_hmac_sha512.h
BitCrypto.MSCLI/: CMakeLists.txt
BitCrypto.MSCLI/src/: main.cpp
BitCrypto.Math/include/bitcrypto/math/: biguint.h  fe256.h  fe_sc.h
BitCrypto.PSBT/: CMakeLists.txt
BitCrypto.PSBT/include/bitcrypto/psbt/: psbt.h
BitCrypto.PSBT2.CLI/: CMakeLists.txt
BitCrypto.PSBT2.CLI/src/: main.cpp
BitCrypto.PSBT2.Tests/: CMakeLists.txt
BitCrypto.PSBT2.Tests/src/: tests_psbt2.cpp
BitCrypto.PSBTCLI/: CMakeLists.txt
BitCrypto.PSBTCLI/src/: main.cpp
BitCrypto.PSBTv2/: CMakeLists.txt
BitCrypto.PSBTv2/include/bitcrypto/psbt2/: psbt_v2.h  psbt_v2_sign.h  psbt_v2_timelock.h  psbt_v2_verify.h
BitCrypto.PuzzleCLI/src/: main.cpp
BitCrypto.RNG/: CMakeLists.txt
BitCrypto.RNG/include/bitcrypto/rng/: rng.h
BitCrypto.Schnorr/include/bitcrypto/schnorr/: bip340.h  musig2.h
BitCrypto.Schnorr/tests/: CMakeLists.txt  tests_musig2.cpp
BitCrypto.SchnorrCLI/src/: main.cpp
BitCrypto.Sign/: CMakeLists.txt
BitCrypto.Sign/include/bitcrypto/sign/: bip322.h  der.h  ecdsa.h  rfc6979.h  scalar_n.h  schnorr.h  sign.h
BitCrypto.Sign/src/: bip322.cpp
BitCrypto.Tests/: CMakeLists.txt
BitCrypto.Tests/src/: main.cpp  tests.cpp
BitCrypto.Tx/: CMakeLists.txt
BitCrypto.Tx/include/bitcrypto/tx/: bip341.h  miniscript.h  multisig.h  psbt.h  psbt_v2.h  script.h  sighash.h  sign.h  taproot.h  taproot_sign.h  tapscript.h  taptree.h  tapwitness.h  tx.h  varint.h
BitCrypto.WSCLI/src/: main.cpp
docs/: ACEITE_QA_2.4.2.md  ACEITE_QA_2.4.6.md  ACEITE_QA_2.5.0.md  AGENTS.md  API_CLI_REFERENCE.md  ARCHITECTURE.md  ARQUITETURA.md  BASE_DE_CONHECIMENTO.md  BENCHMARKS.md  BUILD_WINDOWS.md  CHANGELOG.md  CI.md  CLI_GUIDE.md  COMPLETUDE.md  CONVENCOES_DE_CODIGO.md  DESCRICAO_COMPONENTES.md  DOCS_INDEX.md  FLUXO_DE_CONSTRUCAO.md  GUARDRAILS.md  GUARDRAILS_OVERVIEW.md  PLANEJAMENTO.md  PLANO_DE_CONSTRUCAO.md  PLANO_DE_IMPLEMENTACAO.md  README_DOCS.md  REFERENCIAS_AVANCADAS.md  REGRAS.md  RELEASE_NOTES_2.3.0.md  RELEASE_NOTES_2.4.2.md  RELEASE_NOTES_2.4.6.md  RELEASE_NOTES_2.5.0.md  RELEASE_PROCESS.md  RELEASING.md  ROADMAP.md  ROBUSTEZ.md  SECURITY_MODEL.md  TRANSACOES_PSBT.md  TROUBLESHOOTING.md
tools/guardrails/: check_constant_time_heuristic.py  check_features.py  check_manifest.py  check_no_external_deps.py  check_stubs.py  package_release.py
